fixed vertical alignment for criteria/examples expansions

--- a/site-root/assets/css/api.css
+++ b/site-root/assets/css/api.css
@@ -582,6 +582,10 @@ table.object-properties tr.marker-row > td {
     padding: 0;
 }
 
+.details > tbody > tr > td {
+    vertical-align: top;
+}
+
 .parameter {
 
 }
